# ChangeLog for kde-base/cervisia
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/cervisia/ChangeLog,v 1.68 2007/10/19 21:50:05 philantrop Exp $

*cervisia-3.5.8 (19 Oct 2007)

  19 Oct 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +cervisia-3.5.8.ebuild:
  Bump to KDE 3.5.8.

  11 Aug 2007; Raúl Porcel <armin76@gentoo.org> cervisia-3.5.7.ebuild:
  x86 stable wrt #185823

  11 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org>
  cervisia-3.5.7.ebuild:
  Marked stable on amd64 as per bug 176297.

  09 Aug 2007; Markus Rothe <corsair@gentoo.org> cervisia-3.5.7.ebuild:
  Stable on ppc64; bug #176297

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org> cervisia-3.5.7.ebuild:
  alpha stable wrt #176297

  08 Aug 2007; Joseph Jezak <josejx@gentoo.org> cervisia-3.5.7.ebuild:
  Marked ppc stable.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> cervisia-3.5.7.ebuild:
  Stable on sparc wrt #176297

*cervisia-3.5.7 (22 May 2007)

  22 May 2007; Carsten Lohrke <carlo@gentoo.org> +cervisia-3.5.7.ebuild:
  Version bump.

  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> -cervisia-3.5.2.ebuild:
  Remove old versions.

  25 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> cervisia-3.5.6.ebuild:
  Drop ~hppa and ~mips keywords because of missing kdelibs-3.5.6 keywording.

*cervisia-3.5.6 (16 Jan 2007)

  16 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> +cervisia-3.5.6.ebuild:
  Bump to 3.5.6 (prerelease).

  06 Dec 2006; <kloeri@gentoo.org> cervisia-3.5.5.ebuild:
  Stable on Alpha.

  01 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> cervisia-3.5.2.ebuild,
  cervisia-3.5.5.ebuild:
  Make support for hidden visibility explicit.

  30 Nov 2006; Markus Rothe <corsair@gentoo.org> cervisia-3.5.5.ebuild:
  Stable on ppc64

  24 Nov 2006; Guy Martin <gmsoft@gentoo.org> cervisia-3.5.5.ebuild:
  Stable on hppa.

  18 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> -cervisia-3.5.3.ebuild,
  -cervisia-3.5.4.ebuild: