@@ -5,6 +5,7 @@ DIST kdegames-3.5.5.tar.bz2 10749927 RMD160 42a2910e92b845ca9b79ccdab4980c723291
 DIST kdegames-3.5.6.tar.bz2 10763523 RMD160 03a6cbf6ab1f3fa11dd89d225b412ad3277c9b6e SHA1 1848b81f890180b130000dd6004009d4acc98f48 SHA256 11358a33f0d5a83c0d3f31fefe99040f065696b476c95f1f30c5f83a8bd59202
 DIST kdegames-3.5.7.tar.bz2 10819129 RMD160 bf7260ff8169cbefd467daed2d4f9045144b26d4 SHA1 8bc3d74ad3bdf02142974bc86ed39a560bb69e54 SHA256 f93efeb59b9b3bdecec031d30879da384b1e95c6624a704bcd11d35f910aa07b
 DIST kdegames-3.5.8.tar.bz2 10779312 RMD160 1da527436946c6d19eeaf85cc92c4b52687003cc SHA1 8094228dd488524838e558162bceefb9f0e401fa SHA256 b0727184cbaf14408f84df6f42ff73094de3f0ba0f72bbc337a611a8174e7a8f
+DIST kdegames-4.0.0.tar.bz2 23803729 RMD160 922b679bad534fee64738ddc4af26124f55a426d SHA1 ce1157ef4618c41237261daba084807fdeb3ffab SHA256 d6da48a0fa233a51dd618d21dbbac9c30e95d1ce0efaa9b77a04eb424d7c3426
 EBUILD kbounce-3.5.5.ebuild 562 RMD160 3d16c48a65bc761830cce5e4b897ed1d932c8bc0 SHA1 1e96f2e88b0c956d7b5c5d64073152130fe5ae04 SHA256 a1004f5246f8544cd7dd8e07813e1fdf7a91a11b8329c38e577afec422cab640
 MD5 3d0fa5aadd0d2162d894ccd34aeec957 kbounce-3.5.5.ebuild 562
 RMD160 3d16c48a65bc761830cce5e4b897ed1d932c8bc0 kbounce-3.5.5.ebuild 562
@@ -21,10 +22,14 @@ EBUILD kbounce-3.5.8.ebuild 569 RMD160 b6f1cb74b284c53f3da60bfa51009c28b71b7f41 
 MD5 bcc759e5286e82ef1f3688474394fdf2 kbounce-3.5.8.ebuild 569
 RMD160 b6f1cb74b284c53f3da60bfa51009c28b71b7f41 kbounce-3.5.8.ebuild 569
 SHA256 dc17c3eacbd132b643bcb94105aa812ae9250b8007b9e04ba22ce30e79fdef92 kbounce-3.5.8.ebuild 569
-MISC ChangeLog 8507 RMD160 18d1f4c44da87c218a95acbc9b46fb3fae4cc389 SHA1 af69983300f97f6256b8a51ceb193a9b525ec84a SHA256 f30c8f16eb7e739e010120f06a95c90459ccdd8ee81a6daff26c6d48bebeb3e7
-MD5 3b083cb80b5b62794e702071100bb69a ChangeLog 8507
-RMD160 18d1f4c44da87c218a95acbc9b46fb3fae4cc389 ChangeLog 8507
-SHA256 f30c8f16eb7e739e010120f06a95c90459ccdd8ee81a6daff26c6d48bebeb3e7 ChangeLog 8507
+EBUILD kbounce-4.0.0.ebuild 353 RMD160 f7a41a0e06f42c0b8f810742c8625a6d81985d61 SHA1 53dc975b597ef1f2e14bf01954396be695e15766 SHA256 d89b1a28428beb3364df461a2d43851da6a93150e12a276f6fe787b7ecad0c7c
+MD5 ee79879d85f1c9bc666399366bbcc699 kbounce-4.0.0.ebuild 353
+RMD160 f7a41a0e06f42c0b8f810742c8625a6d81985d61 kbounce-4.0.0.ebuild 353
+SHA256 d89b1a28428beb3364df461a2d43851da6a93150e12a276f6fe787b7ecad0c7c kbounce-4.0.0.ebuild 353
+MISC ChangeLog 8647 RMD160 f0e8298a6f78ffc2bb763fdc8006c81b0dec5ee4 SHA1 08dea3c0b1a9bff4cb35b1316c36e291e275d8be SHA256 7f3f0fd42c93dfb6ed86a89f5e51d177b5c7ac5784ce733054384ee2d47e19af
+MD5 9959c633f6f370fb7e78a4a112b21a41 ChangeLog 8647
+RMD160 f0e8298a6f78ffc2bb763fdc8006c81b0dec5ee4 ChangeLog 8647
+SHA256 7f3f0fd42c93dfb6ed86a89f5e51d177b5c7ac5784ce733054384ee2d47e19af ChangeLog 8647
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -41,10 +46,13 @@ SHA256 5562bdac6a3e1d30b9a418a7431660bbf75f455d6d828f78af2ecc79c20521a1 files/di
 MD5 1881fdd3e3c1e87b3a9c093a0da1cbf3 files/digest-kbounce-3.5.8 253
 RMD160 4a2d00984ab17328b6675bc3c68aaff943ca198f files/digest-kbounce-3.5.8 253
 SHA256 a9150b03d4bb4f3d5d43fe73feb9e94a5356db8c5310d0269c540f3c21bd4c69 files/digest-kbounce-3.5.8 253
+MD5 75366e1853d86597e87d971d01cdd161 files/digest-kbounce-4.0.0 253
+RMD160 164ccddd15df2400f819f613cfe99b6d5b5b90c6 files/digest-kbounce-4.0.0 253
+SHA256 db36dd30e32153d9573343424c0a66334ff7b41bf309a9cb8a9329faa49347a4 files/digest-kbounce-4.0.0 253
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHGU7tCkvF58q80IkRApFQAJ9Jk59gi26XnzkYJKyvrbkRoezt1ACfYWo2
-Qb6RrODPp8eu0gfSTiQhL3c=
-=xhBr
+iD8DBQFHj+YJCkvF58q80IkRAr3jAJ0dHUWkL+tftR2o4EKwWHnuURvTuACfXH2Z
+7Z1TxdZP/LNujmOIGTK9QKk=
+=oQ29
 -----END PGP SIGNATURE-----
