@@ -1,6 +1,16 @@
 # ChangeLog for kde-base/cervisia
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/cervisia/ChangeLog,v 1.68 2007/10/19 21:50:05 philantrop Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/cervisia/ChangeLog,v 1.69 2008/01/17 23:29:37 philantrop Exp $
+
+  17 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org>
+  +cervisia-4.0.0.ebuild:
+  Added KDE 4.0.0's cervisia.
+
+*cervisia-4.0.0 (17 Jan 2008)
+
+  17 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org>
+  +cervisia-4.0.0.ebuild:
+  Added KDE 4.0.0's cervisia.
 
 *cervisia-3.5.8 (19 Oct 2007)
 
